--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
@@ -17,6 +18,7 @@
     "match-sorter": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
